dwa_local_planner changed

--- a/dwa__local_planner/package.xml
+++ b/dwa__local_planner/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>dwa_local_planner</name>
+  <name>dwa__local_planner</name>
   <version>0.0.0</version>
-  <description>The dwa_local_planner package</description>
+  <description>The dwa__local_planner package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
