--- a/motion_planning/package.xml
+++ b/motion_planning/package.xml
@@ -57,7 +57,7 @@
   <build_depend>tf</build_depend>
   <build_depend>astar_global_planner</build_depend>
   <build_depend>vfh_local_planner</build_depend>
-  <build_depend>dwa_local_planner</build_depend>
+  <build_depend>dwa__local_planner</build_depend>
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>navigation_msgs</build_export_depend>
@@ -67,7 +67,7 @@
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>astar_global_planner</build_export_depend>
   <build_export_depend>vfh_local_planner</build_export_depend>
-  <build_export_depend>dwa_local_planner</build_export_depend>
+  <build_export_depend>dwa__local_planner</build_export_depend>
 
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>navigation_msgs</exec_depend>
@@ -77,7 +77,7 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>astar_global_planner</exec_depend>
   <exec_depend>vfh_local_planner</exec_depend>
-  <exec_depend>dwa_local_planner</exec_depend>
+  <exec_depend>dwa__local_planner</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
