--- a/motion_planning/package.xml
+++ b/motion_planning/package.xml
@@ -51,6 +51,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>navigation_msgs</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
@@ -61,6 +62,7 @@
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>navigation_msgs</build_export_depend>
+  <build_export_depend>gazebo_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
@@ -71,6 +73,7 @@
 
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>navigation_msgs</exec_depend>
+  <exec_depend>gazebo_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
